# stip

./: LICENSE  README.md
etc/: hosts.txt
impl/: Cargo.toml
impl/client/: Cargo.toml
impl/client/src/: clap.yaml  cluster.rs  data.rs  dataset.rs  main.rs  task.rs
impl/node/: Cargo.toml
impl/node/src/: data.rs  image.rs  main.rs  rpc.rs  transfer.rs
impl/node/src/rpc/: cluster.rs  data.rs  mod.rs
impl/node/src/task/: fill.rs  load.rs  mod.rs
impl/protobuf/: Cargo.toml  build.rs
impl/protobuf/proto/: mickey.proto  stip.proto
impl/protobuf/src/: lib.rs
impl/stip/: Cargo.toml
impl/stip/src/: album.rs  clap.yaml  cluster.rs  data.rs  image.rs  main.rs  node.rs  task.rs
impl/stipd/: Cargo.toml
impl/stipd/src/: album.rs  environment.rs  image.rs  index.rs  main.rs  transfer.rs
impl/stipd/src/album/: index.rs  mod.rs
impl/stipd/src/rpc/: album.rs  data.rs  environment.rs  image.rs  mod.rs  node.rs  task.rs
impl/stipd/src/task/: coalesce.rs  fill.rs  load.rs  load.rs.bak  mod.rs  open.rs  split.rs
impl/stipd/src/task/load/: mod.rs  modis.rs  naip.rs  sentinel_2.rs
impl/stipd/src/task/store/: generic.rs  gridmet.rs  landsat.rs  mod.rs  modis.rs  naip.rs  nlcd.rs  sentinel2.rs  sentinel_2.rs  viirs.rs
sbin/: compute-cloud-coverage.py  generate-tokens.py  nlcd-pixel-category.py  print-image-sizes.sh  sentinel-2-cloud-coverage.py  start-all.sh  stop-all.sh
sbin/conversion/: gcp2geotransform.py  landsat8c1l1.sh  vnp21v001.sh
sbin/feature-extraction/: nlcd-pixel-category.py  print-image-sizes.sh  sentinel-2-glcm.py  sentinel-2-indices.py
sbin/sentinel-2/: cloud-coverage.py  spectral-metrics.py
