[package]
name = "client"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "../protobuf" }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1"
