[package]
name = "node"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
log = "0.4"
protobuf = { path = "../protobuf" }
structopt = { version = "0.3", default-features = false }
swarm = { path = "../../../swarm-rs" }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1"
