[package]
name = "protobuf"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.1.0"

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
