[package]
name = "stipd"
version = "0.3.2"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
chrono = "0.4"
comm = { path = "../../../comm-rs" }
crossbeam-channel = "0.4"
env_logger = "0.6"
gdal = { path = "/home/hamersaw/Projects/gdal" }
geohash = "0.9"
glob = "0.3"
log = "0.4"
num-derive = "0.2"
num-traits = "0.2"
protobuf = { path = "../protobuf" }
rand = "0.7"
rusqlite = "0.23"
st-image = { path = "../../../st-image" }
structopt = { version = "0.3", default-features = false }
swarm = { path = "../../../swarm-rs" }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1"
zip = "0.5"
